fixed wordbreaks in unit titles

--- a/client/stylesheets/activities_list.css
+++ b/client/stylesheets/activities_list.css
@@ -69,6 +69,13 @@ li.unittitle.active2 > a {
   border: thin none;
   border-radius: 4px;
 }
+#units li.unittitle a.displayTitle {
+  word-break: break-word;
+  -webkit-hyphens: auto;
+     -moz-hyphens: auto;
+      -ms-hyphens: auto;
+          hyphens: auto;
+}
 #units li.unittitle.active > a {
   background-color: DarkMagenta;
 }
